Fix[tools]: use new Mojo caciocavallo17